docs(readme): add quick start section with build and run instructions
Document how to build, run the jar directly, run with Maven, and execute tests. Include a note about the --add-opens JVM flag required when running the jar outside of Maven.